--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,11 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
+@tailwind components;
+@tailwind utilities;
 
  
 :root{
   --plyr-color-main: #f96f2e;
+  --primary : #f96f2e
 }
   .door {
     transform-origin: left;
@@ -27,3 +28,12 @@
     opacity: 1;
   }
   
+  @layer base {
+    @font-face {
+      font-family: 'Clover';
+      font-style: normal;
+      src: url(/fonts/CloverDisplay-Regular.woff) format('woff');
+    }
+
+   
+  }
