--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,10 @@
     transition: transform 0.5s ease-in-out;
   }
   
+.plyr{
+  border-radius: 24px !important;
+}
+
   .doorOpen {
     transform: perspective(1200px) rotateY(-105deg);
   }
