--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,12 +28,21 @@
 }
 
 .video-js{
-  border-radius: 24px !important;
+  /* border-radius: 24px !important; */
   width: 80vw !important;
   height: auto !important;
   max-width: 1020px;
   margin: 0 auto;
 }
+
+.vjs-default-skin{
+  border-radius: 24px !important;
+}
+
+.video-js.vjs-ended .vjs-poster {
+  display: block;
+}
+
 
   .doorOpen {
     transform: perspective(1200px) rotateY(-105deg);
