--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,12 +23,16 @@
     transition: transform 0.5s ease-in-out;
   }
   
-.plyr{
-  border-radius: 24px !important;
-}
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 
-.video-js{
-  border-radius: 24px !important;
+/* .video-js{
   width: 80vw !important;
   height: auto !important;
   max-width: 1020px;
@@ -38,7 +42,7 @@
 
 .vjs-default-skin{
   border-radius: 24px !important;
-}
+} */
 
 .video-js.vjs-ended .vjs-poster {
   display: block;
