--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,8 @@
   --color-secondary-3 : 98, 0, 151;
   --color-grey: 244, 244, 245;
   --color-grey-2: 63, 63, 70;
-
+  --color-accent : 249, 212, 46;
+ 
 }
 
 
@@ -57,6 +58,7 @@
   --color-secondary-3 : 98, 0, 151;
   --color-grey-2: 244, 244, 245;
   --color-grey: 63, 63, 70;
+  --color-accent : 255, 255, 255;
 }
 
   .door {
