--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @layer base {
   @font-face {
     font-family: 'Clover';
     font-style: normal;
     src: url(/fonts/CloverDisplay-Regular.woff) format('woff');
   }
+
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    src: url(/fonts/Poppins-Regular.woff) format('woff');
+  }
+
+  
 
   :root{
     --plyr-color-main: #f96f2e;
@@ -18,6 +26,7 @@
     --color-secondary-1 : 249, 212, 46;
     --color-secondary-2 : 55, 0, 117;
     --color-secondary-3 : 98, 0, 151;
+   
   }
 
 
@@ -60,6 +69,7 @@
   --color-grey: 63, 63, 70;
   --color-accent : 255, 255, 255;
 }
+
 
 
 .stroke-text{
