--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,30 +15,6 @@
     src: url(/fonts/Poppins-Regular.woff) format('woff');
   }
 
-  
-
-  :root{
-    --plyr-color-main: #f96f2e;
-    --primary : #f96f2e;
-    --color-brand : 249,111,46;
-    --color-background : 255, 255, 255;
-    --color-text :  24, 24, 24;
-    --color-secondary-1 : 249, 212, 46;
-    --color-secondary-2 : 55, 0, 117;
-    --color-secondary-3 : 98, 0, 151;
-   
-  }
-
-
-  :root[data-theme="dark"] {
-    --color-brand : 249,111,46;
-    --color-background : 24, 24, 24;
-    --color-text :  255, 255, 255;
-    --color-secondary-1 : 249, 212, 46;
-    --color-secondary-2 : 55, 0, 117;
-    --color-secondary-3 : 98, 0, 151;
-  }
-  
 
 }
 :root{
@@ -52,6 +28,8 @@
   --color-secondary-3 : 98, 0, 151;
   --color-grey: 244, 244, 245;
   --color-grey-2: 63, 63, 70;
+  --color-grey-3: 244, 247, 249;
+  --color-grey-4: 16, 16, 16;
   --color-accent : 249, 212, 46;
  
 }
@@ -67,6 +45,8 @@
   --color-secondary-3 : 98, 0, 151;
   --color-grey-2: 244, 244, 245;
   --color-grey: 63, 63, 70;
+  --color-grey-4: 244, 247, 249;
+  --color-grey-3: 16, 16, 16;
   --color-accent : 255, 255, 255;
 }
 
