--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,7 +36,15 @@
  
 }
 
-
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #181818;
+    /* transition: background-color 5000s ease-in-out 0s;/ */
+    /* box-shadow: inset 0 0 20px 20px #23232329; */
+}
 
 [data-theme="dark"] {
   --color-brand : 249,111,46;
