login and register form ui

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,15 +52,7 @@
   animation: float 3s ease-in-out infinite;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: #181818;
-    /* transition: background-color 5000s ease-in-out 0s;/ */
-    /* box-shadow: inset 0 0 20px 20px #23232329; */
-}
+
 
 [data-theme="dark"] {
   --color-brand : 249,111,46;
@@ -76,6 +68,16 @@ input:-webkit-autofill:active{
   --color-accent : 255, 255, 255;
   --color-yellow : 249, 212, 46;
   --color-purple :  55, 0, 117;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(var(--color-text));
+    /* transition: background-color 5000s ease-in-out 0s;/ */
+    /* box-shadow: inset 0 0 20px 20px #23232329; */
 }
 
 .rotate-x-180{
