--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,9 +83,9 @@ input:-webkit-autofill:active{
     /* box-shadow: inset 0 0 20px 20px #23232329; */
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 10px; /* Adjust the width as needed */
-}
+
 
 /* Track of the scrollbar (background) */
 ::-webkit-scrollbar-track {
@@ -102,7 +102,7 @@ input:-webkit-autofill:active{
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* Darker color on hover */
-}
+} */
 
 .rotate-x-180{
   transform: rotateX(180deg);
