--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,6 +83,8 @@ input:-webkit-autofill:active{
     /* box-shadow: inset 0 0 20px 20px #23232329; */
 }
 
+/* Add this to your global CSS file */
+
 
 
 .rotate-x-180{
