--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @layer base {
   @font-face {
     font-family: 'Clover';
@@ -9,11 +10,11 @@
     src: url(/fonts/CloverDisplay-Regular.woff) format('woff');
   }
 
-  @font-face {
+  /* @font-face {
     font-family: 'Poppins';
     font-style: normal;
     src: url(/fonts/Poppins-Regular.woff) format('woff');
-  }
+  } */
 
 
 }
@@ -34,6 +35,11 @@
   --color-yellow : 249, 212, 46;
   --color-purple :  55, 0, 117;
  
+}
+
+.font-poppins{
+  font-family: "Poppins",system-ui;
+
 }
 
 @keyframes float {
