reset password old password check and onboarding animation delay added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,8 +65,11 @@ textarea {
   50% {
     transform: translateY(-10px);
   }
-  100% {
+  90% {
     transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(0px); 
   }
 }
 
