--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,7 +165,7 @@ input:-webkit-autofill:active{
     scrollbar-width: none;  /* Firefox */
   }
 
-  .video-js{
+  /* .video-js{
   width: 100% !important;
   height: auto !important;
   max-width: 1020px;
@@ -175,7 +175,7 @@ input:-webkit-autofill:active{
 
 .vjs-default-skin{
   border-radius: 24px !important;
-} */
+}  */
 
 .video-js.vjs-ended .vjs-poster {
   display: block;
