leaderboard functionlity done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,6 +140,21 @@ input:-webkit-autofill:active{
   transform: rotateX(180deg);
 }
 
+
+.tower {
+  perspective: 1000px;
+}
+
+.tower > div {
+  transition: transform 0.3s;
+  transform-style: preserve-3d;
+}
+
+.hover\:grow:hover {
+  transform: scale(1.1);
+}
+
+
 .clip{
   clip-path: circle(50% at 0 0);
 }
