--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,10 @@ textarea {
   box-shadow: 0px 6px 10px 0px rgba(var(--shadow));
 }
 
+.gap-2-1{
+  gap : 0.5rem !important;
+}
+
 .shadow-defined-top{
   box-shadow: 0px -6px 6px 0px rgba(var(--shadow));
 }
