--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,13 +68,16 @@ textarea {
 }
 
 .gap-2-1{
-  gap : 0.5rem !important;
+  gap : 0.25rem !important;
 }
 
 .shadow-defined-top{
   box-shadow: 0px -6px 6px 0px rgba(var(--shadow));
 }
 
+.shadow-defined-both{
+  box-shadow: 6px -6px 6px 0px rgba(var(--shadow));
+}
 .sidebar {
   width: 5rem; /* collapsed width */
   transition: width 0.3s ease;
