--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,13 +10,6 @@
     src: url(/fonts/CloverDisplay-Regular.woff) format('woff');
   }
 
-  /* @font-face {
-    font-family: 'Poppins';
-    font-style: normal;
-    src: url(/fonts/Poppins-Regular.woff) format('woff');
-  } */
-
-
 }
 
 *{
@@ -43,7 +36,7 @@
 }
 
 
-input[type="color"],
+/* input[type="color"],
 input[type="date"],
 input[type="datetime"],
 input[type="datetime-local"],
@@ -60,7 +53,7 @@ input[type="week"],
 select:focus,
 textarea {
   font-size: 16px !important;
-}
+} */
 
 
 .shadow-defined{
