--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,9 @@
   --shadow: 112, 128, 176, 0.12;
 }
 
+.input-size-override{
+  font-size: 14px !important;
+}
 
 input[type="color"],
 input[type="date"],
@@ -53,6 +56,11 @@ input[type="week"],
 select:focus,
 textarea {
   font-size: 16px !important;
+}
+
+
+input[type="text"].custom-font-size {
+  font-size: 14px !important;
 }
 
 
